fix: fix overflow problem on iPhone

--- a/dev/src/styles/foundation/_base.scss
+++ b/dev/src/styles/foundation/_base.scss
@@ -21,7 +21,6 @@ body {
   font-size: calc(10px + 2vmin);
   font-size: 1.8rem;
   position: relative;
-  overflow-x: hidden;
 }
 
 h1 {
